<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="log_in">Log in</string>
    <string name="signup_text">Don\'t have an account yet? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup">Sign up</string>
    <string name="alert_dialog_message">Please fill out all of the fields!</string>
    <string name="error_dialod_title">Error!</string>
    <string name="wrong_login_message">Please enter a valid login data.</string>
    <string name="logout_label">Log out</string>
    <string name="title_activity_reset_pass">ResetPassActivity</string>
    <string name="resert_text">Reset password</string>
    <string name="error_reset_message">Sorry something went wrong. Try again!</string>
    <string name="forgot_pass_label">Fargot password?</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string-array name="camera_choices">
        <item>Take Photo</item>
        <item>Take Video</item>
        <item>Choose Photo</item>
        <item>Choose Video</item>
    </string-array>
    <string name="size_toast">The video must be less than 10 MB!</string>
    <string name="file_problem_toast">There was a problem with the selected file!</string>
    <string name="file_size_problem_toast">The selected file is too large. Choose another one!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_send_message">Send Message</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="title_activity_view_message">Ribbit</string>
    <string name="cancel">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="send_msg_title">TYPE IN AND SHARE</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new message from %s!</string>
</resources>
