<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="samotys.danylo.ribbit.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthLinLayout">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthTextField"
            android:hint="@string/username_hint">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthTextField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthTextField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/AuthButton"
        android:text="@string/signup"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"/>

    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:text="@string/cancel"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"/>


</RelativeLayout>
