<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="samotys.danylo.ribbit.ui.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:src="@drawable/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitStart"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthLinLayout">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthTextField">

            <requestFocus/>
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthTextField"/>

    </LinearLayout>


    <Button
        android:text="@string/log_in"
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:id="@+id/signUpText"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_label"
        android:id="@+id/forgotPassText"
        android:layout_below="@id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
